--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>合成大构式</title>
+    <title>合成大沈星</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
@@ -127,11 +127,11 @@
             //        console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "小游戏：合成大构式";
+                document.title = "小游戏：合成大沈星";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "小遊戲：合成大构式";
+                document.title = "小遊戲：合成大沈星";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "小遊戲：合成大构式";
+                document.title = "小遊戲：合成大沈星";
             } else if (window.navigator.language == "ko-KR") {
                 document.title = "작은 놀이：큰 수박 을 합성 하 다";
             } else if (window.navigator.language == "ja-JP") {
@@ -139,7 +139,7 @@
             } else if (window.navigator.language == "th-TH") {
                 document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
             } else {
-                document.title = "Little game：Synthetic goushi";
+                document.title = "Little game：Synthetic Goushi Shenxing";
             }
 
 
